# machine-learning

./: README.md  ensemble_learning.md  explain_scaling.py  indexing.ipynb  pandas_prac.ipynb  pyproject.toml  requirements.txt  summary_and_maps.ipynb
boosting/: boosting.ipynb
decision_trees/: decision_trees.ipynb
evaluation/: model_evaluation_and_tuning.ipynb
kmeans/: advanced_kmeans.ipynb  kmeans.ipynb
kmeans/project/: my_project.ipynb  project_customer_segmentation.ipynb
knn/: knn.ipynb
linreg/: IceCreamData.csv  gradient_descent.ipynb  intro_to_linear_regression.ipynb  linreg_from_scratch.ipynb  multiple_linreg.ipynb  project.ipynb  simple_linreg_from_scratch.ipynb
logreg/: logistic_regression.ipynb
naive_bayes/: naive_bayes.ipynb
naive_bayes/project/: project.ipynb
pandas/: indexing.ipynb  pandas_prac.ipynb
pca/: pca.ipynb
project/: README.md  model.ipynb
random_forests/: random_forests.ipynb
random_forests/churn_project/: project.ipynb
regularization/: regularization.ipynb
svm/: svm.ipynb
