[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.0.3",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "joblib==1.5.3",
    "jupyterlab==4.5.5",
    "matplotlib==3.10.8",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "notebook-shim==0.2.4",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pillow==9.0.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2022.1",
    "pyyaml==6.0.1",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "threadpoolctl==3.6.0",
    "ucimlrepo>=0.0.7",
    "uv==0.11.3",
]
